--- a/project/package.json
+++ b/project/package.json
@@ -8,6 +8,7 @@
     "classnames": "2.3.1",
     "dayjs": "1.10.7",
     "history": "4.10.1",
+    "lodash": "4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "7.2.2",
@@ -49,6 +50,7 @@
     "@testing-library/user-event": "12.8.0",
     "@types/faker": "5.5.8",
     "@types/jest": "^26.0.15",
+    "@types/lodash": "4.14.175",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
