--- a/project/package.json
+++ b/project/package.json
@@ -11,11 +11,11 @@
     "lodash": "4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hot-toast": "^2.1.1",
+    "react-hot-toast": "2.1.1",
     "react-redux": "7.2.2",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
-    "reselect": "^4.0.0"
+    "reselect": "4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
